--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,11 @@ VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 # Add your Google Analytics Measurement ID here
 # Get it from: https://analytics.google.com/
 # Format: G-XXXXXXXXXX
+
+# Supabase Configuration
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key-here
+
+# Get these from: https://app.supabase.com/project/_/settings/api
+# VITE_SUPABASE_URL: Your project URL
+# VITE_SUPABASE_ANON_KEY: Your project's anon/public key (safe to expose in frontend)
