feat: Implement contact form email sending functionality using EmailJS with a new service, template, and environment variables.

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,14 @@ VITE_SUPABASE_ANON_KEY=your-anon-key-here
 # Get these from: https://app.supabase.com/project/_/settings/api
 # VITE_SUPABASE_URL: Your project URL
 # VITE_SUPABASE_ANON_KEY: Your project's anon/public key (safe to expose in frontend)
+
+# EmailJS Configuration
+VITE_EMAILJS_SERVICE_ID=your_service_id
+VITE_EMAILJS_TEMPLATE_ID=your_template_id
+VITE_EMAILJS_PUBLIC_KEY=your_public_key
+
+# Get these from: https://dashboard.emailjs.com/
+# 1. Create an account at EmailJS
+# 2. Add an email service (Gmail recommended)
+# 3. Create an email template
+# 4. Copy the Service ID, Template ID, and Public Key
